can chat, fixed error with which chats to show, fixed not showing multiple of same chat

--- a/src/footer.sass
+++ b/src/footer.sass
@@ -53,6 +53,7 @@
     .messages
       padding: 0px 25px 25px 25px
       font-size: .8em
+      height: 200px
 
       .message
         padding-top: 5px
@@ -65,7 +66,7 @@
       .message.me
         text-align: right
         justify-content: flex-end
-
+        color: #fff
         span
           background-color: #4080ff
       .message.you
